Fix author position, add wrap div on compilers page, fix favicon tag

--- a/assets/style.css
+++ b/assets/style.css
@@ -239,7 +239,8 @@ Not really any of those on the website though AFAIK.
   color: #ddd;
   display: block;
   max-width: 600px;
-  margin: 0 .5em;
+  margin: 0 auto;
+  padding-right: 10px;
   text-align: right;
 }
 
